Bug 165383 - Rules resolution on save break format conditioning on load
Summary: Rules resolution on save break format conditioning on load
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.5.2 release
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:25.8.0 target:25.2.2 target:24...
Keywords: bibisected, bisected, filter:xlsx, regression
Depends on:
Blocks:
 
Reported: 2025-02-22 00:36 UTC by Hildo
Modified: 2025-03-07 00:34 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
test file (8.10 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-02-22 06:56 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hildo 2025-02-22 00:36:53 UTC
Description:
When the spreadsheet is saved (at lead on Excel xlsx format) the specific formula, e.g., `SUM($K$9:K9)` is resolved to `SUM($K$9:K9)`. This is not a problem when it is used to expand through the column.

The problem lies when I use such formula for a column in a Conditioning Format in the RANGE K9:Kinf. To the cell K9, as typed in the dialog, must be applied the rule `SUM($K$9:K9) > 10`, for example, wich implies in `SUM($K$9:K10)` to cell K10 and so on.

This construction works fine until ans save and resolve the file: all this kind of formula `SUM($K$9:K9)` became `SUM($K$9)`, which is not a problem in the spreadsheet cells it self. But it broke the Condition Formatting behavior intended, as above.

I just checked save to ODS file and it appear fine

Version: 24.8.5.2 (X86_64) / LibreOffice Community
Build ID: 480(Build:2)
CPU threads: 4; OS: Linux 6.11; UI render: default; VCL: gtk3
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 4:24.8.5~rc2-0ubuntu0.24.04.1~lo1
Calc: threaded

Steps to Reproduce:
1. Create a spreadsheet and fill the K9:K12 column with values [0, 5, 10, 15];
2. Add a conditining format SUM($K$9:K9) > 10`;
3. Save the file.

Actual Results:
The conditioning format get applied to K11 and K12, because of the resolution of `SUM($K$9:K9) > 10`. But after reopen the saved XLSX file the formula became `SUM($K$9) > 10`and the rule incorrect applied.

Expected Results:
The first result before save the file.


Reproducible: Always


User Profile Reset: No

Additional Info:
Since the error appear not be present at ODS file, it may be the save/open XLS/XLSX routines.

It is necessary to check if the Microsoft Excel present save issue to "keep the issue compatibility"?
Comment 1 raal 2025-02-22 06:47:40 UTC
I can confirm with Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e420583fee9f753e7de5a207637fda25e495ac7d
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

Regresion, works in Version: 7.3.7.2 / LibreOffice Community
Comment 2 raal 2025-02-22 06:56:12 UTC
Created attachment 199371 [details]
test file

Open test file, save as xlsx, reload.
Comment 3 raal 2025-02-22 07:18:45 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.8.
Adding Cc: to Eike Rathke ; Could you possibly take a look at this one?
Thanks
 a8b2d179e710081569762aa49cb591db785fbbe1 is the first bad commit
commit a8b2d179e710081569762aa49cb591db785fbbe1
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Thu Oct 24 16:15:28 2024 +0200

    source b3adc88a5b73125bb6dd7f2ccb76ff6a382efd2e

175495: Resolves: tdf#163554 Read/write Excel 3D reference as 'Sheet1:Sheet2'!C4 | https://gerrit.libreoffice.org/c/core/+/175495
Comment 4 Commit Notification 2025-02-27 17:21:22 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fbf053ac8f6983116014d8f24e153304794d1021

Resolves: tdf#165383 Write range reference also if absolute/relative differ

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Eike Rathke (retired, only occasionally showing up) 2025-02-27 17:23:11 UTC
Pending review
https://gerrit.libreoffice.org/c/core/+/182319 for 25-2
https://gerrit.libreoffice.org/c/core/+/182320 for 24-8
Comment 6 Commit Notification 2025-02-27 19:07:36 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/f4ea898bbf2883e0a063336637f8699cc35b0253

Resolves: tdf#165383 Write range reference also if absolute/relative differ

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-02-27 19:08:40 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/2c0d9aa0345f6ce24ec9b9cd8b023ad53c728510

Resolves: tdf#165383 Write range reference also if absolute/relative differ

It will be available in 24.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-02-27 21:28:00 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d03fd2119edf3e8b7f1cbb33b2c9951e8f0acc8b

tdf#165383: sc_subsequent_export_test4: Add unittest

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.