Resolves: tdf#165383 Write range reference also if absolute/relative differ

... and top left / bottom right point to a single cell, so $K$9:K9
remains expandable to $K$9:K10

Change-Id: Ibafd1f715ae72de21d268e934ffd82df9a48f625
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182313
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>